开发及调试nginx模块入门

--- a/nginx-1.7.4/modules_devel/ngx_upstream_jdomain/config
+++ b/nginx-1.7.4/modules_devel/ngx_upstream_jdomain/config
@@ -1,3 +1,6 @@
+# 模块名称
 ngx_addon_name=ngx_http_upstream_jdomain_module
+# 追加模块到模块组
 HTTP_MODULES="$HTTP_MODULES ngx_http_upstream_jdomain_module"
+# 指定新增模块的源码文件
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_upstream_jdomain.c"
